# ecrad-offload-examples

./: CMakeLists.txt  README.md
cpu_scheme/: CMakeLists.txt  cpu_scheme_layer_mod.F90  cpu_scheme_mod.F90  cpu_scheme_program.F90
field_api/: field_data_module.F90
hoisted_ii_scheme/: CMakeLists.txt  hoisted_ii_scheme_layer_mod.F90  hoisted_ii_scheme_mod.F90  hoisted_ii_scheme_program.F90
hoisted_scheme/: CMakeLists.txt  hoisted_scheme_layer_mod.F90  hoisted_scheme_mod.F90
radiation/: radiation_ii_types.F90  radiation_types.F90
